# camp

./: CMakeLists.txt  COPYRIGHT  Dockerfile  LICENSE  README.md  azure-pipelines.yml
cmake/: FindSphinx.cmake  campConfig.cmake.in  load_blt.cmake
docs/: CMakeLists.txt  conf.py  index.rst
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/sphinx/: camp_license.rst
docs/sphinx/dev_guide/: index.rst
docs/sphinx/user_guide/: features.rst  getting_started.rst  index.rst  using_camp.rst
docs/sphinx/user_guide/feature/: array.rst  list.rst  number.rst  resource.rst  tuple.rst
include/camp/: array.hpp  camp.hpp  concepts.hpp  config.in.hpp  defines.hpp  helpers.hpp  lambda.hpp  list.hpp  make_unique.hpp  map.hpp  number.hpp  resource.hpp  size.hpp  tuple.hpp  type_traits.hpp  value.hpp
include/camp/detail/: sfinae.hpp  test.hpp
include/camp/list/: at.hpp  find_if.hpp  list.hpp
include/camp/number/: if.hpp  number.hpp
include/camp/resource/: cuda.hpp  event.hpp  hip.hpp  host.hpp  omp_target.hpp  platform.hpp  sycl.hpp
include/camp/type_traits/: is_same.hpp
include/camp/value/: eval.hpp
scripts/: update_copyright.sh
src/: errors.cpp
test/: CMakeLists.txt  accumulate.cpp  append.cpp  array.cpp  at_key.cpp  errors.cpp  extend.cpp  filter.cpp  find_if.cpp  flatten.cpp  index_of.cpp  lambda.cpp  number.cpp  prepend.cpp  resource.cpp  size.cpp  transform.cpp  tuple.cpp
